# tas

./: .coverage  .dockerignore  .eslintrc.js  .gitattributes  .gitignore  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_REVIEW.md  D0_CHECKLIST.md  D0_FINAL_STATUS.md  D0_PROGRESS.md  D0_RELEASE_STATUS.md  DEPLOYED.md  DEPLOYMENT.md  DEPLOY_INSTRUCTIONS.md  DEVELOPMENT_PLAN.md  Dockerfile  EXECUTIVE_REPORT.md  FEEDBACK_SYSTEM.md  FINAL_REPORT.md  FINAL_REVIEW.md  FINAL_SETUP.md  LICENSE  MIGRATION.md  NIGHTLY_EVALUATOR.md  POSITIONING.md  PRICING_LIMITS.md  PROJECT_SUMMARY.md  QUICK_START.md  RAPIDAPI_CARD.md  RAPIDAPI_DOCS.md  RAPIDAPI_LAUNCH_CHECKLIST.md  README.md  README_RELEASE.md  README_SETUP.md  READMEold.md  RELEASE_COMPLETE.md  RELEASE_PLAN.md  RELEASE_READINESS.md  (+27 more)
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  deploy-fly.yml  pages.yml
LEGAL/: PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
app/: cache.py  cli.py  config.py  constants.py  deps.py  feedback_db.py  feedback_reporter.py  llm_check.py  lur.py  main.py  metrics.py  ml_model.py  pii_redaction.py  pipeline.py  qzn.py  rate_limit.py  regex_patterns.py  rol.py  rrs.py  rule_importer.py  sig.py  v1_vision.py  vision_check.py
data/collected/: shadow_data.json
docs/: LLM_MODES.md  README.md  api-examples.html  index.html  status.html
examples/: docker-compose.yml  telegram_middleware.py
examples/go/: Dockerfile  README.md  client.go
examples/java/: Client.java  Dockerfile  README.md
examples/node/: Dockerfile  README.md  client.js
examples/php/: Dockerfile  README.md  client.php
examples/python/: Dockerfile  README.md  client.py
monitoring/: alerts.yml  grafana_dashboard.json  prometheus.yml
release/rapidapi-pack/: README.md  postman_collection.json
reports/: .gitkeep  AUTOMATION_ENHANCED.md  AUTO_IMPROVE_SETUP.md  BACKGROUND_SCRIPTS_STATUS.md  D0_FINAL_ASSETS.md  D3.md  D3_REPORT_TEMPLATE.md  D7.md  DATA_COLLECTION_SETUP.md  DATA_COLLECTION_STATUS.md  examples_run.md
reports/auto_improvement/: cycle_20251110_192233.json
reports/canary/: DRY_RUN.md
reports/health/: health_20251111_125359.json
rules/suggestions/: latest.json  latest.md
runbooks/: BLUE_GREEN.md  COST_SPIKE.md  LLM_OUTAGE.md
scripts/: analyze_feedback.py  auto_improve.py  auto_improve_cycle.sh  auto_improve_enhanced.py  auto_test_quality.py  batch_cli.py  canary_dry_run.py  canary_promote.py  check_background_status.sh  check_pages.sh  collect_feedback.py  create_rapidapi_pack.sh  export_grafana_dashboard.sh  generate_auto_report.py  generate_screenshots.py  improve_rules.py  install.sh  monitor_health.py  run_data_collection.sh  run_nightly_evaluator.sh  setup_auto_improve.sh  setup_cron_collection.sh  smoke_after_publish.sh  smoke_test_prod.sh  test_examples.sh  verify_readiness.sh
sdks/go/: README.md  go.mod
sdks/go/tas/: client.go
sdks/nodejs/: README.md  index.js  package.json
sdks/nodejs/examples/: basic.js
sdks/python/examples/: basic.py  modes.py
sdks/python/tas_sdk/: README.md  __init__.py  client.py  setup.py
src/: app.ts  finetune.ts  keywords.ts  mutex.ts
tests/: test_api_endpoints.py  test_cli.py  test_di_init.py  test_feedback_db.py  test_feedback_reporter.py  test_integrated_pipeline.py  test_llm_retry.py  test_metrics.py  test_patterns_only.py  test_performance.py  test_pipeline_logic.py  test_report_csv.py  test_rule_balance.py  test_sandbox_scenarios.py  test_ux_demo.py
tests/chaos/: test_burst_load.py  test_llm_outage.py
tests/e2e/: test_demo_page.py
