[tool.poetry]
name = "tas"
version = "1.0.0"
description = "Transmodal Anti-Spam REST API - Multi-layer transmodal spam detection service"
authors = ["KikuAI Lab"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.139.2"
uvicorn = {extras = ["standard"], version = "^0.51.0"}
pydantic = "^2.13.4"
pydantic-settings = "^2.14.2"
openai = "^1.6.0"
python-multipart = "^0.0.32"
cachetools = "^5.3.2"
httpx = "^0.28.1"
pandas = "^2.3.3"
prometheus-client = "^0.25.0"
click = "^8.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
httpx = "^0.28.1"
ruff = "^0.15.22"
mypy = "^1.7.0"
matplotlib = "^3.10.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.poetry.scripts]
tas = "app.cli:cli"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--ignore=tests/e2e --ignore=tests/chaos --cov=app --cov-report=term-missing --cov-fail-under=60"

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
